--- a/css/music.css
+++ b/css/music.css
@@ -2,17 +2,31 @@
 *{
   box-sizing: border-box;
 }
+
 body{
   margin: 0;
   padding: 0;
   font-family: "Raleway", sans-serif;
   color: #fff;
   background-color: #051024;
-  overflow: hidden;
+  height: 10000px;
 }
 /*End global*/
 
 /*Start Navbar*/
+nav {
+  padding: 25px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
 .t-b{
   background-color: #051024 !important;
 }
@@ -100,3 +114,74 @@ nav .icons i:hover{
   }
 }
 /*End Navbar*/
+
+
+/* Start Header */
+.header {
+  position: relative;
+  background-image: url(../images/11.jpg);
+  background-size: cover;
+  background-position: center;
+}
+/* End Header */
+
+/* Start Header */
+.header .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.header .info {
+  color: #fff;
+  position: absolute;
+  top: 40%;
+  width: 50%;
+}
+.header span {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 800;
+}
+.header h2 {
+  font-size: 90px;
+  margin: 0;
+  color: #ff275e;
+}
+.header p:first-of-type {
+  font-size: 30px;
+  margin: 0;
+  font-weight: 800;
+}
+.header p:last-of-type {
+  font-size: 14px;
+  letter-spacing: 1px;
+  line-height: 1.5;
+}
+.header button {
+  border: 1px solid transparent;
+  padding: 10px 30px;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  background: linear-gradient(90deg, rgba(199,44,106,1) 0%, rgba(78,61,203,1) 100%);
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.header button:hover {
+  background: none;
+  border-color:#ff275e;
+  color: #ff275e;
+}
+/* End Header */
