--- a/css/music.css
+++ b/css/music.css
@@ -11,6 +11,7 @@ body {
   background-color: #051024;
   height: 10000px;
 }
+
 /*End global*/
 
 /*Start Navbar*/
@@ -27,17 +28,21 @@ nav {
   -ms-transition: 0.5s;
   -o-transition: 0.5s;
 }
+
 .t-b {
   background-color: #051024 !important;
 }
+
 .navbar {
   transition: all 0.5s ease-in-out;
   padding-top: 1.563rem;
   padding-bottom: 1.563rem;
 }
+
 nav .logo img {
   width: 80px;
 }
+
 nav a {
   color: #fff;
   position: relative;
@@ -46,16 +51,20 @@ nav a {
   text-transform: capitalize;
   padding: 10px;
 }
+
 nav ul li {
   transition: all 0.5s ease-in-out;
 }
+
 nav ul li:not(:last-of-type) {
   margin-right: 20px;
 }
+
 nav ul li a.active,
 nav ul li a:hover {
   color: #ff275e !important;
 }
+
 nav ul li a:before {
   content: "";
   width: 0px;
@@ -66,6 +75,7 @@ nav ul li a:before {
   background-color: rgba(229, 42, 112, 1);
   transition: all 0.5s ease;
 }
+
 nav ul li a:after {
   content: "";
   width: 0px;
@@ -76,48 +86,56 @@ nav ul li a:after {
   background-color: rgba(88, 65, 229, 1);
   transition: all 0.5s ease;
 }
+
 nav ul li:hover a:after {
   width: 50%;
   transform: translateX(-100%);
 }
+
 nav ul li:hover a:before {
   width: 50%;
   transform: translateX(100%);
 }
+
 .navbar-nav {
   margin: 0 auto;
 }
+
 .navbar-toggler {
   background-color: #ff275e !important;
   outline: none !important;
 }
+
 .navbar-toggler-icon i {
   margin-top: 3px;
   font-size: 24px;
 }
+
 nav .icons i {
   margin-right: 15px;
   cursor: pointer;
   transition: 0.2s;
 }
+
 nav .icons i:hover {
-  background: linear-gradient(
-    90deg,
-    rgba(229, 42, 112, 1) 0%,
-    rgba(158, 55, 174, 1) 50%,
-    rgba(88, 65, 229, 1) 100%
-  );
+  background: linear-gradient(90deg,
+      rgba(229, 42, 112, 1) 0%,
+      rgba(158, 55, 174, 1) 50%,
+      rgba(88, 65, 229, 1) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 @media (max-width: 992px) {
   .nav-link {
     display: inline-block;
   }
+
   .navbar-collapse {
     margin-left: 10px;
   }
 }
+
 /*End Navbar*/
 
 /* Start Header */
@@ -127,6 +145,7 @@ nav .icons i:hover {
   background-size: cover;
   background-position: center;
 }
+
 /* End Header */
 
 /* Start Header */
@@ -138,34 +157,40 @@ nav .icons i:hover {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
 }
+
 .header .info {
   color: #fff;
   position: absolute;
   top: 40%;
   width: 50%;
 }
+
 .header span {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
 }
+
 .header h2 {
   font-size: 90px;
   margin: 0;
   color: #ff275e;
   text-transform: uppercase;
 }
+
 .header p:first-of-type {
   font-size: 30px;
   margin: 0;
   font-weight: 800;
   text-transform: uppercase;
 }
+
 .header p:last-of-type {
   font-size: 14px;
   letter-spacing: 1px;
   line-height: 1.5;
 }
+
 .header button {
   border: 1px solid transparent;
   padding: 10px 30px;
@@ -178,11 +203,9 @@ nav .icons i:hover {
   outline: none;
   cursor: pointer;
   font-size: 16px;
-  background: linear-gradient(
-    90deg,
-    rgba(199, 44, 106, 1) 0%,
-    rgba(78, 61, 203, 1) 100%
-  );
+  background: linear-gradient(90deg,
+      rgba(199, 44, 106, 1) 0%,
+      rgba(78, 61, 203, 1) 100%);
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
@@ -190,27 +213,32 @@ nav .icons i:hover {
   -o-transition: 0.3s;
   text-transform: capitalize;
 }
+
 .header button:hover {
   background: none;
   border-color: #ff275e;
   color: #ff275e;
 }
+
 /* End Header */
 
 /* End Tours */
 .tours {
   margin-top: 70px;
 }
+
 .tours .image,
 .tours .info {
   flex: 50%;
   max-width: 50%;
   padding: 0 15px;
 }
+
 .tours .image img {
   width: 100%;
   height: 570px;
 }
+
 .tours .info .circle {
   flex: 20%;
   max-width: 20%;
@@ -218,9 +246,11 @@ nav .icons i:hover {
   justify-content: center;
   align-items: center;
 }
+
 .tours .info .row {
   margin-bottom: 40px;
 }
+
 .tours .info .circle .con {
   position: relative;
   width: 80px;
@@ -239,6 +269,7 @@ nav .icons i:hover {
   text-transform: uppercase;
   line-height: 24px;
 }
+
 .tours .info .circle .con::after {
   content: "";
   position: absolute;
@@ -246,11 +277,9 @@ nav .icons i:hover {
   left: -1px;
   right: -1px;
   bottom: -1px;
-  background: linear-gradient(
-    90deg,
-    rgba(199, 44, 106, 1) 0%,
-    rgba(78, 61, 203, 1) 100%
-  );
+  background: linear-gradient(90deg,
+      rgba(199, 44, 106, 1) 0%,
+      rgba(78, 61, 203, 1) 100%);
   z-index: -1;
   border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -258,53 +287,141 @@ nav .icons i:hover {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
+
 .tours .circle span {
   font-size: 17px;
   font-weight: 900;
 }
+
 .tours .info .details {
   flex: 80%;
   max-width: 80%;
 }
-.tours .info .details p{
+
+.tours .info .details p {
   text-transform: uppercase;
   font-size: 17px;
   letter-spacing: 1px;
   margin-bottom: 10px;
 }
-.tours .info .details span{
+
+.tours .info .details span {
   font-size: 12px;
   margin-right: 50px;
   color: #777;
 }
 
-
-.tours .info .details i{
+.tours .info .details i {
   margin-right: 10px;
 }
-.tours .fa-clock{
+
+.tours .fa-clock {
   color: #231d55;
 }
-.tours .fa-map-marker-alt{
+
+.tours .fa-map-marker-alt {
   color: #ff275e;
 }
+
 /* Start Tours */
+
+/* Start Music */
+.music {
+  margin-top: 70px;
+}
+
+.music .btns {
+  text-align: center;
+  padding-bottom: 30px; 
+}
+
+.music .main-btn {
+  display: inline-block;
+}
+
+.music .main-btn:not(:last-of-type) {
+  margin-right: 15px;
+}
+
+.music .image {
+  flex: 45%;
+  max-width: 45%;
+  background-image: url(/images/13.png);
+  height: 600px;
+  position: relative;
+}
+
+.music .image .name {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  background: linear-gradient(90deg,
+      rgba(199, 44, 106, 1) 0%,
+      rgba(78, 61, 203, 1) 100%);
+      opacity: 0.8;
+      font-size: 30px;
+      text-transform: uppercase;
+      letter-spacing: 4px;
+}
+
+.music .songs {
+  flex: 55%;
+  max-width: 55%;
+  padding: 0 15px 0 80px;
+}
+
+.music .songs .item {
+  flex: 33.33333%;
+  max-width: 33.33333%;
+  padding: 0 15px;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.music .fa-creative-commons-sampling {
+  margin-left: 15px;
+}
+
+.music .songs .controls button{
+  background: none;
+  color: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.music .songs .sound {
+  margin-bottom: 35px;
+}
+
+.music .view {
+  display: block;
+  margin-top: 30px !important;
+}
+/* End Music */
 
 /* Start Framework */
 .heading {
   text-align: center;
-  margin-bottom: 70px;
+  margin-bottom: 25px;
 }
+
 .heading h2 {
   font-size: 27px;
   color: #ff275e;
   text-transform: uppercase;
   margin-bottom: 5px;
 }
+
 .heading p {
   font-size: 12px;
   letter-spacing: 1px;
 }
+
 .main-btn {
   border: 1px solid #ff275e;
   padding: 7px 22px;
@@ -326,18 +443,27 @@ nav .icons i:hover {
   -o-transition: 0.3s;
   text-transform: uppercase;
   display: block;
-  margin-top:20px ;
+  margin-top: 20px;
 }
-.main-btn:hover{
-  background: linear-gradient(
-  90deg,
-  rgba(199, 44, 106, 1) 0%,
-  rgba(78, 61, 203, 1) 100%
-);
-color: #fff;
-border:  1px solid transparent;
+
+.main-btn:hover {
+  background: linear-gradient(90deg,
+      rgba(199, 44, 106, 1) 0%,
+      rgba(78, 61, 203, 1) 100%);
+  color: #fff;
+  border: 1px solid transparent;
 }
+
+.active-btn {
+  background: linear-gradient(90deg,
+      rgba(199, 44, 106, 1) 0%,
+      rgba(78, 61, 203, 1) 100%);
+  color: #fff;
+  border: 1px solid transparent;
+}
+
 .m-auto {
   margin: 0 auto;
 }
+
 /* End Framework */
