--- a/css/music.css
+++ b/css/music.css
@@ -422,6 +422,55 @@ nav .icons i:hover {
 }
 /* End Photos */
 
+
+/* Start Blogs */
+.blogs {
+  margin-top: 70px;
+}
+
+.blogs .box {
+  flex: 33.3333%;
+  max-width: 33.3333%;
+  padding: 0 15px;
+  cursor: pointer;
+}
+
+.blogs .box:hover img {
+  transform: scale(1.5) rotate(17deg);
+  -webkit-transform: scale(1.5) rotate(17deg);
+  -moz-transform: scale(1.5) rotate(17deg);
+  -ms-transform: scale(1.5) rotate(17deg);
+  -o-transform: scale(1.5) rotate(17deg);
+}
+.blogs .box img {
+  width: 100%;
+  height: 260px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.blogs .box p {
+  font-weight: 800;
+  line-height: 30px;
+  padding-right: 30px;
+}
+.blogs .box span {
+  font-size: 12px;
+  text-transform: capitalize;
+}
+.blogs .box span:not(:last-of-type) {
+  margin-right: 30px;
+}
+.blogs .box i {
+  color: #ff275e;
+  margin-right: 10px;
+}
+/* End Blogs */
+
+
+
 /* Start Framework */
 .heading {
   text-align: center;
@@ -482,6 +531,10 @@ nav .icons i:hover {
 
 .m-auto {
   margin: 0 auto;
+}
+
+.overflow-h {
+  overflow: hidden;
 }
 
 /* End Framework */
